# BatchCommandHandler

./: CMakeLists.txt  README.md  async.cpp  batch_command.cpp  batch_command.h  batch_command_handler.cpp  batch_command_handler.h  main.cpp  tokenizer.cpp  tokenizer.h
Commands/: batch_command_handler.cpp  batch_command_handler.h  end_dynamic_block.cpp  end_dynamic_block.h  file_command.h  icommand.h  shape_command.h  start_dynamic_block.cpp  start_dynamic_block.h
Output/: console_output.cpp  console_output.h  ioutput.h  logfile_output.cpp  logfile_output.h
include/: async.h  batch_command_handler.h
include/network/: server.h
include/outputs/: console_output.h  ioutput.h  logfile_output.h
src/: async.cpp  batch_command_handler.cpp  main.cpp
src/outputs/: console_output.cpp  logfile_output.cpp
